[package]
name = "cs_server"
version = "0.1.0"
authors = ["Sander Greni <sander.greni@gmail.com>"]
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
json = "0.12.4"
json_stuff = { path = "../json_stuff" }
common = { path = "../common" }
epoller = { path = "../epoller" }
